<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_title" />

        <AutoCompleteTextView
            android:id="@+id/expense_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >

            <requestFocus />
        </AutoCompleteTextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_amount" />

        <EditText
            android:id="@+id/expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789.,"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_payer" />

        <TextView
            android:id="@+id/expense_payer"
            style="@style/Widget.AppCompat.Light.Base.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:text="@string/expense_payer_prompt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_date" />

        <TextView
            android:id="@+id/expense_date"
            style="@style/Widget.AppCompat.Light.Base.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp" />

        <CheckBox
            android:id="@+id/custom_split"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/custom_split" />

        <TableLayout
            android:id="@+id/expense_split_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>