<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:layout_margin="16dp"
        android:orientation="vertical" >

        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/calculation_title" />

	    <EditText
	        android:id="@+id/calculation_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text" >
	        <requestFocus />
	    </EditText>

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/calculation_currency" />

	    <Spinner
	        android:id="@+id/calculation_currency"	         
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/calculation_persons" />

        <LinearLayout
	        android:id="@+id/person_list"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" />
	
     </LinearLayout>

</ScrollView>